--- a/ex022/Imagens/fundo006.html
+++ b/ex022/Imagens/fundo006.html
@@ -11,11 +11,12 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;    
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +27,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quia, maxime placeat atque natus aliquid ut rem ad eveniet labore veniam odio iste eos deserunt nesciunt hic blanditiis? Excepturi, sapiente Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, veritatis rem nihil aut voluptatem consequuntur architecto eos quae quas eaque! Architecto possimus suscipit officia quod omnis esse dolore voluptates quae Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque distinctio at rem dolorem error, pariatur temporibus! Iure et, consequuntur molestiae velit odio ex, accusamus sit, quidem illo ut provident eaque?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro quia, maxime placeat atque natus aliquid ut rem ad eveniet labore veniam odio iste eos deserunt nesciunt hic blanditiis? Excepturi, sapiente Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, veritatis rem nihil aut voluptatem consequuntur architecto eos quae quas eaque! Architecto possimus suscipit officia quod omnis esse dolore voluptates quae Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque distinctio at rem dolorem error, pariatur temporibus! Iure et, consequuntur molestiae velit odio ex, accusamus sit, quidem illo ut provident eaque? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, assumenda debitis! Qui deleniti nulla pariatur, odit voluptatem, iste accusantium animi architecto alias illum magnam saepe libero. Libero voluptatibus veritatis ex? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam magnam odio laudantium soluta dolorem cumque reiciendis! Corrupti doloremque magni animi voluptates libero provident aut, a velit fugiat praesentium molestiae inventore?</p>
     </main>
 </body>
 </html>
